updated TODO list

--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
 10 July 2016
- [ ] update TOC to use latex 
+ [x] update TOC to use latex 
+ [ ] Change TOC title font to use the one requested by the user
 
 22 April 2016
  [ ] compute word count
