--- a/TODO
+++ b/TODO
@@ -1,3 +1,6 @@
+15 July 2016
+ [ ] remove 'output' option - it's meaningless
+
 10 July 2016
  [x] update TOC to use latex 
  [x] Change TOC title font to use the one requested by the user
