updating TODO list

--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 15 July 2016
+ [ ] update gravatar for moonimal and djam@lanl.gov
  [x] remove 'output' option - it's meaningless
  [ ] texcount -l -sum manuscript.tex > manuscript.sum
 
