updating some variables

--- a/TODO
+++ b/TODO
@@ -1,9 +1,11 @@
+Features
+ [ ] create settings.min (minuscript settings file) that resides in the same
+     directory as the manuscript, and controls things in the layout
+
 15 July 2016
  [ ] fix bug: using a colon in the first line of a scene pops multimarkdown 
      into the 'metadata' mode
  [ ] texcount.pl -l -sum manuscript.tex > manuscript.sum
- [ ] create settings.min (minuscript settings file) that resides in the same
-     directory as the manuscript, and controls things in the layout
  [x] add some .pdf content and another example manuscript.json file
      that pulls it in (content not tied to documentation spefics - too
      hard to change w/o typewriter)
