--- a/TODO
+++ b/TODO
@@ -1,4 +1,6 @@
 Features
+ [ ] "--init" likely no longer works, b/c the files are no longer being
+     installed. Determine how best to fix that.
  [ ] check for existence of the scene files before doing anything
  [ ] create settings.min (minuscript settings file) that resides in the same
      directory as the manuscript, and controls things in the layout
