added check during synopsis operation

--- a/TODO
+++ b/TODO
@@ -1,4 +1,6 @@
 Features
+ [ ] test synopsis file option. Should now report if a synopsis file isn't
+     found and translated to the build directory
  [ ] check for existence of the scene files before doing anything
  [ ] create settings.min (minuscript settings file) that resides in the same
      directory as the manuscript, and controls things in the layout
