adding synopsis CLA

--- a/todo
+++ b/todo
@@ -1,4 +1,5 @@
 Minty
+ [ ] make chapter and synopsis functions the same
  [ ] look at using pandoc and markdown, longterm
  [ ] Footnotes
  [ ] Table of contents
