added quote and synpsis option

--- a/todo
+++ b/todo
@@ -1,4 +1,5 @@
 Minty
+ [ ] indent quote file
  [ ] make chapter and synopsis functions the same
  [ ] look at using pandoc and markdown, longterm
  [ ] Footnotes
