--- a/todo
+++ b/todo
@@ -6,7 +6,7 @@ Minty
      minuscript.
 
 Minuscript
-Features
+ [ ] Check on 'phantomsection' - should all of this be removed?
  [ ] name chapter key/value pair 'summary' instead of 'desc' to be consistent
      with the ways it is used (in particular, the CLA for chapsum
  [ ] collapse 'poetry, stories, and manuscript' into a single CLO
